# mllab

./: .gitmodules
attention-is-all-you-need/: flake.nix  pyproject.toml
nix-flake-container/: README.org  flake.nix
simple-pytorch-transformer/: README.org  pyproject.toml
simple-pytorch-transformer/app/: nn.py
simple-pytorch-transformer/app/transformer/: model.py  train.py
